--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "lucide-react": "^0.453.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
+    "react-player": "^3.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-use": "^17.6.0",
     "recharts": "^2.15.2",
